Finishing in the gab section

--- a/src/pages/articles/beautiful-analysis.mdx
+++ b/src/pages/articles/beautiful-analysis.mdx
@@ -116,7 +116,14 @@ spoken by the caller, for each of the ten episode transcripts:
   caption="Figure 1: Word counts per episode for Gethard and the caller. Tap or mouse over a bar for more details on the episode." 
 />
 
-- basic stats (num lines, word count)
+My biggest takeaway from this graph is that Gethard seems to have gotten much
+more comfortable creating space for his guests. He spoke the most in the very
+first episode: 6,394 words, more than 67% of the total. 
+
+Overall, though, his guests tend to say more than he does: Gethard only has a
+majority of the total words in **three** of these ten episodes, and across the ten
+transcribed episodes his share of the words stands at around 44%. If we exclude
+his particularly chatty first episode, that percentage drops to 42%.
 
 ---
 
