--- a/src/pages/articles/beautiful-analysis.mdx
+++ b/src/pages/articles/beautiful-analysis.mdx
@@ -12,7 +12,8 @@ tags:
 ---
 
 import baSummary from "data/json/ba-summary.json";
-import { PodcastWordCounts } from "story_components";
+import baSentimentData from "data/json/ba-sentiment-examples.json";
+import { PodcastWordCounts, SentimentScoreTable } from "story_components";
 
 _[Beautiful Stories From Anonymous People](https://www.earwolf.com/show/beautiful-anonymous/)_
 (a.k.a. _Beautiful / Anonymous_) is a podcast with a simple premise: "One phone
@@ -38,10 +39,10 @@ empathizer, friend. But if there's one thing Gethard is not, it's a lover of
 mathematics.
 
 Gethard's negative math feelings are well-documented. Even his
-listeners are aware of it. For example, in [one episode](https://www.earwolf.com/episode/deaf/) 
+listeners are aware of it. For example, in [one episode](https://www.earwolf.com/episode/deaf/)
 Gethard chats with a deaf caller via the aid of a sign language interpreter. At
 one point, the topic of lipreading comes up. Here's what the caller has to say
-(emphasis added): 
+(emphasis added):
 
 > I'm actually a pretty bad lipreader, even though I do use it. That's
 > something with lipreading, that's another pet peeve that a lot of deaf people
@@ -81,22 +82,22 @@ for quantitative analysis. I went through all of those transcripts and crunched
 the numbers, trying to answer questions like:
 
 1. How much talking does Gethard do during the call compared to the caller?
-1. How does the _sentiment_ of a typical call change? In general are they 
-  positive, negative, or neutral?
+1. How does the _sentiment_ of a typical call change? In general are they
+   positive, negative, or neutral?
 1. Given a random line from a transcript, what are some clues that the line
-  came from Gethard as opposed to someone calling in?
+   came from Gethard as opposed to someone calling in?
 1. To what extent can we train a computer to talk like Chris Gethard?
 
 In what follows, I'd like to offer some answers to all of these questions. Some
 caveats and clarifications:
 
 1. Gethard opens and closes every episode with a few minutes of talking directly
-to the listener. He also reads ads a couple of times during each episode. I've
-removed all the intro, outro, and ad text from this analysis. The only text I've
-considered here is the text that comes from conversation with the caller.
+   to the listener. He also reads ads a couple of times during each episode. I've
+   removed all the intro, outro, and ad text from this analysis. The only text I've
+   considered here is the text that comes from conversation with the caller.
 2. Because I only have ten episodes to analyze, rather than the entire library
-(which, as of this writing, numbers over 170 episodes), some of the results
-you'll see here are biased by the small sample size. More on this below.
+   (which, as of this writing, numbers over 170 episodes), some of the results
+   you'll see here are biased by the small sample size. More on this below.
 
 With that said, let's check out the results!
 
@@ -109,16 +110,16 @@ We don't have timestamps available on the transcripts, so instead we'll use word
 count as a proxy.
 
 Here's how the number of words spoken by Gethard compares to the number of words
-spoken by the caller, for each of the ten episode transcripts: 
+spoken by the caller, for each of the ten episode transcripts:
 
 <PodcastWordCounts
   data={baSummary}
-  caption="Figure 1: Word counts per episode for Gethard and the caller. Tap or mouse over a bar for more details on the episode." 
+  caption="Figure 1: Word counts per episode for Gethard and the caller. Tap or mouse over a bar for more details on the episode."
 />
 
 My biggest takeaway from this graph is that Gethard seems to have gotten much
 more comfortable creating space for his guests. He spoke the most in the very
-first episode: 6,394 words, more than 67% of the total. 
+first episode: 6,394 words, more than 67% of the total.
 
 Overall, though, his guests tend to say more than he does: Gethard only has a
 majority of the total words in **three** of these ten episodes, and across the ten
@@ -127,19 +128,65 @@ his particularly chatty first episode, that percentage drops to 42%.
 
 ---
 
-### Sentimental
+### Getting Sentimental
 
-- sentiment
+Another thing we can do with these transcripts is analyze the sentiment of the
+text. As people are talking, do their sentences have a positive sentiment, a
+negative sentiment, or a neutral sentiment?
+
+This may seem like a difficult thing to pin down, especially if we'd like to
+automate the analysis. Some statements are straightforward: we can probably
+agree that "I love you" should count as having positive sentiment, and "I hate
+you" should have negative sentiment.
+
+Next, consider the sentence "Sometimes I love you, but sometimes I hate you." Is
+this positive? Negative? Neutral? And how do you teach a computer how to assess
+the sentiment so that we don't have to manually do for every transcript?
+
+Fortunately, there's an off-the-shelf solution here works well. It's called
+VADER Sentiment Analysis (short for **V**alence **A**ware **D**ictionary and
+s**E**ntiment **R**easoner). It's basically a giant lexicon of words along with
+their associated sentiment. The text was originally pulled from social media,
+but, according to the maintainers of the project, it "is also generally
+applicable to sentiment analysis in other domains."
+
+VADER can take a text and analyze it sentence-by-sentence for positive,
+negative, and neutral sentiment. It spits out a few different stats, but the one
+we'll be gives each sentence a score between -1 and 1. The closer to 1, the more
+positive the sentiment; the closer to -1, the more negative the sentiment.
+
+To make things concrete, here are some examples of Gethard statements, along
+with their associated sentiment score:
+
+<SentimentScoreTable
+  sentences={baSentimentData}
+  caption="Figure 2: Sentiment scores for different things Chris Gethard has said."
+/>
+
+VADER's not perfect. In particular, the example sentences marked as "neutral"
+don't seem to be all that neutral. But in the aggregate this can provide us with
+a useful metric for how positive or negative someone's speaking patterns might be.
+
+Let's once again take a look at how Gethard compares to his callers. How many
+times do they each talk about things with positive, negative, or neutral
+sentiment? Here's a breakdown by sentence and by episode:
+
+
+
+- avg sentiment for each speaker
+- sentiment over time across episode
 
 ---
 
 ### Sorry Sally
 
+- cursing for each speaker
+
 ---
 
 ### Whose Line is it Anyway?
 
-- common phrases 
+- common phrases
 - Chris predictors
 
 ---
@@ -152,5 +199,10 @@ Sources:
 
 - [A Beginner's Guide to Beautiful Anonymous](https://medium.com/@chrisgeth/a-beginners-guide-to-beautiful-anonymous-dffa5a520f52), by Chris Gethard.
 
+- [Vader Sentiment](https://github.com/cjhutto/vaderSentiment) on GitHub.
+
+- [Sentiment analysis with NLTK /VADER — Comments on Lee Hsien Loong’s Facebook post](https://medium.com/@sharonwoo/sentiment-analysis-with-nltk-422e0f794b8), by Sharon Woo.
+
+- [Simplifying Sentiment Analysis using VADER in Python (on Social Media Text)](https://medium.com/analytics-vidhya/simplifying-social-media-sentiment-analysis-using-vader-in-python-f9e6ec6fc52f), by Parul Pandey.
 
 profanity check: https://victorzhou.com/blog/better-profanity-detection-with-scikit-learn/
